--- a/Python_Operators.ipynb
+++ b/Python_Operators.ipynb
@@ -461,13 +461,347 @@
     "7. Bitwise Operator:-\n",
     "\n",
     "    - Bitwise Operator s a character that performs bitwise calculations on integers by converting them to binary and then operating on each bit\n",
-    "    - "
+    "    - Bitwise Opertaors are divided into 6 types\n",
+    "    - They are AND(&),OR(|),XOR,NOT,LEFT SHIFT,RIGHT SHIFT "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "730d27b2-5c4e-4ae0-a15e-a59dd12fc767",
+   "metadata": {},
+   "source": [
+    "AND operator :-\n",
+    "\n",
+    "- R\n",
+    "represented by using ( &\n",
+    "- They )\r\n",
+    "called as BITWISE \n",
+    "- D.\r\n",
+    "If both the values are 1 then output \n",
+    "- s 1\r\n",
+    "Either one or both are 0 then output\n",
+    "- is 0\r\n",
+    "if x,y are two values and bitwie and for x , y is represented as x & y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40a32a4b-8c5a-4b30-9400-358f06bfc721",
+   "metadata": {},
+   "source": [
+    "OR operator\n",
+    "\n",
+    "- represented by using ( | )\n",
+    "- called as BITWISE OR.\n",
+    "- If both the values are 0 then output is 0\n",
+    "- Either one or both are 1 then output is 1\n",
+    "- if x,y are two values and bitwise or for x , y is represented as x | y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5a4f551-8065-483f-92e0-16f7270eba79",
+   "metadata": {},
+   "source": [
+    "XOR operator :\n",
+    "\n",
+    "- represented by using ( ^ )\n",
+    "- called as BITWISE XOR.\n",
+    "- If both the values are same then output is 0\n",
+    "- If both th values are differen then the output is 1.\n",
+    "- if x,y are two values and bitwise or for x , y is represented as x ^ y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3aa27af-ea15-4355-83a4-87f52b26b4f9",
+   "metadata": {},
+   "source": [
+    "\n",
+    "NOT operator :\n",
+    "\n",
+    "- represented by using ( ~ )\n",
+    "- called as BITWISE NOT.\n",
+    "- If the output is 1 it reverse and gives the output as 0.\n",
+    "- If the output is 0 it reverse and gives the output as 1.\n",
+    "- If x is a value and bitwise not of x , represented as ~ x."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0adda008-f14f-479c-bf0b-f703387c2c83",
+   "metadata": {},
+   "source": [
+    "Right shift operator :\n",
+    "\n",
+    "- represented by using ( >> )\n",
+    "- called as BITWISE RIGHT SHIFT.\n",
+    "- Shifts the bits to the right.\n",
+    "- For positive numbers it fills with 0.\n",
+    "- For negative numbers it fills with 1.\n",
+    "- If x is a number and we need to do right shift with n then the representation is x>>n."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "526cc430-38ce-4c13-bf03-1e732347d85a",
+   "metadata": {},
+   "source": [
+    "Bitwise left shift\n",
+    "\n",
+    "- represented by using ( >> )\n",
+    "- called as BITWISE LEFT SHIFT.\n",
+    "- Shifts the bits to the left.\n",
+    "- The left shift operator moves all bits in a binary representation to the left by a specified number of positions\n",
+    "- if x is a number and we need to do right shift with n then the representation is x<<n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "35c69262-63c0-4a2f-9057-c4c3a66346fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "8\n",
+      "18\n",
+      "0\n",
+      "2016\n",
+      "32\n",
+      "2024\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example for  AND\n",
+    "a = 10\n",
+    "b = 4\n",
+    "print(a&b)\n",
+    "\n",
+    "x=12\n",
+    "y=9\n",
+    "print(x&y)\n",
+    "\n",
+    "x=18\n",
+    "y=22\n",
+    "print(x&y)\n",
+    "\n",
+    "\n",
+    "a = 24\n",
+    "b = 4\n",
+    "print(a&b)\n",
+    "\n",
+    "\n",
+    "s=2024\n",
+    "n=2023\n",
+    "print(s&n)\n",
+    "\n",
+    "s=102\n",
+    "v=432\n",
+    "print(s&v)\n",
+    "\n",
+    "u=2029\n",
+    "v=2040\n",
+    "print(u & v)\n",
+    "\n",
+    "y=2026\n",
+    "z=0\n",
+    "print(y&z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "00014db9-7a32-481a-afaa-ff8c29e6a296",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "13\n",
+      "22\n",
+      "28\n",
+      "2031\n",
+      "502\n",
+      "2045\n",
+      "2026\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example for  OR\n",
+    "a = 10\n",
+    "b = 4\n",
+    "print(a|b)\n",
+    "\n",
+    "x=12\n",
+    "y=9\n",
+    "print(x|y)\n",
+    "\n",
+    "x=18\n",
+    "y=22\n",
+    "print(x|y)\n",
+    "\n",
+    "\n",
+    "a = 24\n",
+    "b = 4\n",
+    "print(a|b)\n",
+    "\n",
+    "\n",
+    "s=2024\n",
+    "n=2023\n",
+    "print(s|n)\n",
+    "\n",
+    "s=102\n",
+    "v=432\n",
+    "print(s|v)\n",
+    "\n",
+    "u=2029\n",
+    "v=2040\n",
+    "print(u | v)\n",
+    "\n",
+    "y=2026\n",
+    "z=0\n",
+    "print(y|z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2448c538-f7e6-4748-aab3-892aa735d7f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6-(71*float(6/71))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5d99a1f7-a285-4c3a-bb2c-fb66cd043c66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "71-(6*float(71/6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e1b83a18-81d8-45c9-8250-bc54e3546e0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "343"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c09bcc06-ca2f-4a5b-b32f-27063dda8491",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10^4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8f5a7aef-0a51-400d-a87c-49e288a803f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "12^5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1f496383-3c3d-47a5-86fc-be66c4e2d950",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-11"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "~10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "232aae9f-0d64-413b-9180-a8f1e070566f",
+   "id": "b501ae88-c8aa-4a68-a1db-6143143989b9",
    "metadata": {},
    "outputs": [],
    "source": []
