--- a/Python_list.ipynb
+++ b/Python_list.ipynb
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 3,
    "id": "36814b8a-5a68-4bc4-858a-b48602a1e221",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 2, 3, 3, 4, 4, 5, 6, 6, 6, 6]\n",
+      "asceding order =  [1, 2, 2, 3, 3, 4, 4, 5, 6, 6, 6, 6]\n",
+      "descinding order =  [6, 6, 6, 6, 5, 4, 4, 3, 3, 2, 2, 1]\n",
       "['ROhith', 'Virat', 'kohiLi', 'sharma']\n"
      ]
     }
@@ -636,7 +637,11 @@
     "#Example for sort\n",
     "a = [1,2,4,3,2,4,3,5,6,6,6,6]\n",
     "a.sort()\n",
-    "print(a)\n",
+    "print(\"asceding order = \",a)\n",
+    "\n",
+    "a.sort(reverse=True)\n",
+    "print(\"descinding order = \",a)\n",
+    "\n",
     "\n",
     "india = [\"Virat\",\"kohiLi\",\"ROhith\",\"sharma\"]\n",
     "india.sort()\n",
@@ -656,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 6,
    "id": "8669e6c0-5bce-4302-a301-65db687dffa2",
    "metadata": {},
    "outputs": [
@@ -693,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 9,
    "id": "72d1168f-0988-450b-a9f8-91a014d66f53",
    "metadata": {},
    "outputs": [
@@ -730,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 12,
    "id": "cecde6ea-c5ea-434b-8ca2-4c1c9b1955eb",
    "metadata": {},
    "outputs": [
@@ -758,6 +763,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "855add68-a649-42a3-b872-0768b233f0d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f1a4a3a-8faa-4156-a865-0c4bd4b94062",
    "metadata": {},
    "outputs": [],
    "source": []
